[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jason Stirnaman", email = "jstirnaman@influxdata.com"},
    {name = "Benjamin Maggi", email = "benjaminmaggi@gmail.com"},
]
dependencies = [
    "flask>=2.1.2",
    "influxdb-client>=1.29.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
